Tests ClientService et ReservationService, changement getLast() pour permettre au test de s'executer